[gd_scene load_steps=5 format=3 uid="uid://cphcr81upg72i"]

[ext_resource type="Script" uid="uid://bekd2ju1yo4cx" path="res://Scripts/gun.gd" id="1_sluxj"]
[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://Player/Gun/pistol.png" id="2_idur6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nthgb"]
radius = 987.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7uwb"]
bg_color = Color(1, 0, 0, 1)

[node name="Gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_sluxj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nthgb")

[node name="WeaponPivot" type="Marker2D" parent="."]
position = Vector2(62, 0)
gizmo_extents = 47.7

[node name="Pistol" type="Sprite2D" parent="WeaponPivot"]
texture = ExtResource("2_idur6")
offset = Vector2(16, 0)

[node name="ShootingPoint2" type="Marker2D" parent="WeaponPivot/Pistol"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(35, -11)
rotation = 0.610865
gizmo_extents = 30.6

[node name="ShootingPoint3" type="Marker2D" parent="WeaponPivot/Pistol"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(35, -11)
rotation = -0.610865
gizmo_extents = 30.6

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Pistol"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(35, -11)
gizmo_extents = 30.6

[node name="ReloadBar" type="ProgressBar" parent="WeaponPivot/Pistol"]
unique_name_in_owner = true
z_index = 100
offset_left = -13.0
offset_top = -66.0
offset_right = 47.0
offset_bottom = -31.0
theme_override_styles/fill = SubResource("StyleBoxFlat_b7uwb")
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.353
one_shot = true
